More rules added

--- a/layouts/section/klc.html
+++ b/layouts/section/klc.html
@@ -9,12 +9,12 @@
 
 			<h2>General Library Guidelines</h2>
 
-			<h3>G1 - Filenames</h3>
+			The following guidlines apply to all library elements.
+
+			<h3>G1 - General Guidelines</h3>
 			{{ partial "klc_rule_list" (dict "scope" . "filter" "G1.") }}
 
-			<h3>G2 - Library Organisation</h3>
-			{{ partial "klc_rule_list" (dict "scope" . "filter" "G2.") }}
-
+			<hr>
 			<h2>Symbol Guidelines</h2>
 
 			<h3>S1 - Symbol Libraries</h3>
@@ -38,10 +38,11 @@
 			<h3>S7 - Special Symbols</h3>
 			{{ partial "klc_rule_list" (dict "scope" . "filter" "S7.") }}
 
-			<h2>
+			<hr>
 			<h2>Footprint Guidelines</h2>
 
 			<h3>F1 - Footprint Libraries</h3>
+
 			{{ partial "klc_rule_list" (dict "scope" . "filter" "F1.") }}
 
 			<h3>F2 - Footprint Naming</h3>
