KLC page cleanup

--- a/layouts/section/klc.html
+++ b/layouts/section/klc.html
@@ -13,13 +13,13 @@
 			The KiCad Library Convention (KLC) is a set of requirements for contributing to the KiCad official libraries. Users wishing to sumbit or update library files should be familiar with these guidelines.
 		</p>
 		<p>
-			The KLC are a set of _guidelines_, rather than _rules_. Electronic component libraries are diverse and complex, and exceptions can be made at the discretion of the library team.
+			The KLC are a set of <i>guidelines</i>, rather than <i>rules</i>. Electronic component libraries are diverse and complex, and exceptions can be made at the discretion of the library team.
 		</p>
 			<ul>
 			<li>
-			Where the KLC deviates from a particular datasheet or manufacturer recommendation, the datasheet _should take preference_ unless there is a good reason not to do so (which will be clarified by a librarian)
+			Where the KLC deviates from a particular datasheet or manufacturer recommendation, the datasheet <i>should take preference</i> unless there is a good reason not to do so (which will be clarified by a librarian).
 		</li><li>
-			Where the KLC is unclear, users should attempt to match the convention of existing library components, or seek further clarification
+			Where the KLC is unclear, users should attempt to match the convention of existing library components, or seek further clarification.
 		</li></ul>
 
 		<p>
@@ -28,8 +28,6 @@
 
 			<hr>
 			<h2>General Library Guidelines</h2>
-
-			The following guidlines apply to all library elements.
 
 			<h3>G1 - General Guidelines</h3>
 			{{ partial "klc_rule_list" (dict "scope" . "filter" "G1.") }}
