--- a/layouts/section/klc.html
+++ b/layouts/section/klc.html
@@ -38,6 +38,9 @@
 			<h3>G1 - General Guidelines</h3>
 			{{ partial "klc_rule_list" (dict "scope" . "filter" "G1.") }}
 
+			<h3>G2 - Atomic and Generic Parts</h3>
+			{{ partial "klc_rule_list" (dict "scope" . "filter" "G2." ) }}
+
 			<hr>
 			<h2>Symbol Guidelines</h2>
 
