--- a/layouts/section/libraries.html
+++ b/layouts/section/libraries.html
@@ -33,13 +33,13 @@
     {{ partial "github_release_table.html" "kicad-library" }}
 
     <h3>Footprint Library Releases</h3>
-    {{ partial "github_release_table.html" "footprints" }}
+    {{ partial "github_release_table.html" "kicad-footprints" }}
 
     <h3>3D Model Library Releases</h3>
     {{ partial "github_release_table.html" "packages3d" }}
 
     <h3>Template Library Releases</h3>
-    {{ partial "github_release_table.html" "templates" }}
+    {{ partial "github_release_table.html" "kicad-templates" }}
   </div>
 </div>
 </div>
