--- a/layouts/partials/github_lib_table.html
+++ b/layouts/partials/github_lib_table.html
@@ -4,8 +4,8 @@
     <th>GitHub Repository</th>
     <th>Download</th>
   </tr>
-  {{ partial "github_dl_link.html" (dict "repo" "symbols" "title" "Schematic symbols") }}
-  {{ partial "github_dl_link.html" (dict "repo" "footprints" "title" "PCB footprints") }}
+  {{ partial "github_dl_link.html" (dict "repo" "kicad-symbols" "title" "Schematic symbols") }}
+  {{ partial "github_dl_link.html" (dict "repo" "kicad-footprints" "title" "PCB footprints") }}
   {{ partial "github_dl_link.html" (dict "repo" "packages3d" "title" "3D models") }}
-  {{ partial "github_dl_link.html" (dict "repo" "templates" "title" "Project templates") }}
+  {{ partial "github_dl_link.html" (dict "repo" "kicad-templates" "title" "Project templates") }}
 </table>
