Added section F7 for virtual components

--- a/layouts/section/klc.html
+++ b/layouts/section/klc.html
@@ -81,14 +81,17 @@
 			<h3>F4 - Layer Requirements</h3>
 			{{ partial "klc_rule_list" (dict "scope" . "filter" "F4.") }}
 
-			<h3>F5 - Surface Mount Devices</h3>
+			<h3>F5 - Surface Mount Components</h3>
 			{{ partial "klc_rule_list" (dict "scope" . "filter" "F5.") }}
 
-			<h3>F6 - Through Hole Devices</h3>
+			<h3>F6 - Through Hole Components</h3>
 			{{ partial "klc_rule_list" (dict "scope" . "filter" "F6.") }}
 
-			<h3>F7 - Footprint Properties</h3>
+			<h3>F7 - Virtual Components</h3>
 			{{ partial "klc_rule_list" (dict "scope" . "filter" "F7.") }}
+
+			<h3>F8 - Footprint Properties</h3>
+			{{ partial "klc_rule_list" (dict "scope" . "filter" "F8.") }}
 
 			<hr>
 			<h2>3D Model Guidelines</h2>
