Added 'libraries' button to index.html

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,6 +21,10 @@
                     <i class="fa fa-windows"></i>
                   </a>
                 </li>
+                <li>
+                  <a href="/libraries/" class="btn btn-default">
+                    <i class="fa fa-download fa-fw"></i><span class="network-name">Libraries</span>
+                  </a>
               </ul>
             </div>
           </div>
