GitHub repo address tweaks

--- a/layouts/partials/github_lib_table.html
+++ b/layouts/partials/github_lib_table.html
@@ -6,6 +6,6 @@
   </tr>
   {{ partial "github_dl_link.html" (dict "repo" "kicad-symbols" "title" "Schematic symbols") }}
   {{ partial "github_dl_link.html" (dict "repo" "kicad-footprints" "title" "PCB footprints") }}
-  {{ partial "github_dl_link.html" (dict "repo" "packages3d" "title" "3D models") }}
+  {{ partial "github_dl_link.html" (dict "repo" "kicad-packages3d" "title" "3D models") }}
   {{ partial "github_dl_link.html" (dict "repo" "kicad-templates" "title" "Project templates") }}
 </table>
