--- a/layouts/section/libraries.html
+++ b/layouts/section/libraries.html
@@ -36,7 +36,7 @@
     {{ partial "github_release_table.html" "kicad-footprints" }}
 
     <h3>3D Model Library Releases</h3>
-    {{ partial "github_release_table.html" "packages3d" }}
+    {{ partial "github_release_table.html" "kicad-packages3d" }}
 
     <h3>Template Library Releases</h3>
     {{ partial "github_release_table.html" "kicad-templates" }}
