--- a/layouts/klc/single.html
+++ b/layouts/klc/single.html
@@ -1,3 +1,4 @@
+{{ $.Scratch.Add "additional_head_tags" "<link href=\"/fonts/font-linux.css\" rel=\"stylesheet\">" }}
 {{ partial "header.html" .}}
 
 <style>
