--- a/layouts/partials/breadcrumb.html
+++ b/layouts/partials/breadcrumb.html
@@ -5,7 +5,7 @@
     {{ range $index, $element := split $url "/" }}
         {{ $.Scratch.Add "path" $element }}
         {{ if ne $element "" }}
-            <li><a href="{{ $.Scratch.Get "path" }}/">{{ replace (title .) "-" " " }}</a></li>
+            <li><a href="{{ $.Scratch.Get "path" }}/">{{ replace (replace (title .) "-" " ") "_" " " }}</a></li>
             {{ $.Scratch.Add "path" "/" }}
         {{ end }}
     {{ end }}
