--- a/layouts/section/libraries.html
+++ b/layouts/section/libraries.html
@@ -1,10 +1,20 @@
-{{ $.Scratch.Add "additional_head_tags" "<link href=\"/fonts/font-linux.css\" rel=\"stylesheet\">" }}
 {{ partial "header.html" . }}
+
+{{ $currentNode := . }}
+{{ .Scratch.Set "sidemenu" false }}
+{{ .Scratch.Set "sidemenu_section" $currentNode.Section }}
+{{ range .Site.Menus.main }}
+	{{ if eq $currentNode.Section (.Name | lower) }}
+		{{ if .HasChildren }}
+			{{ $currentNode.Scratch.Set "sidemenu" true }}
+		{{ end }}
+	{{ end }}
+{{ end }}
 
 <div class="container">
   <div class="row">
 
-    <div class="col-lg-8 col-lg-offset-2">
+    <div class="col-lg-8 col-lg-offset-2 {{ if .Scratch.Get "sidemenu" }}col-md-10 col-sm-9{{ else }}col-sm-12{{ end }}">
 			{{ partial "breadcrumb.html" . }}
 
 			<div class="page-heading">
@@ -40,7 +50,14 @@
 
     <h3>Template Library Releases</h3>
     {{ partial "github_release_table.html" "kicad-templates" }}
+
+    <h2>Library License</h2>
+    <p>
+      KiCad library license information can be found <a href="/libraries/license/">here</a>.
+    </p>
   </div>
+
+  {{ partial "sidebar.html" . }}
 </div>
 </div>
 
