Large rule update

--- a/layouts/section/klc.html
+++ b/layouts/section/klc.html
@@ -96,7 +96,7 @@
 			<hr>
 			<h2>3D Model Guidelines</h2>
 
-			<h3>M1 - </h3>
+			<h3>M1 - 3D Files </h3>
 			{{ partial "klc_rule_list" (dict "scope" . "filter" "M1.") }}
 
 
