--- a/layouts/shortcodes/fp_prefix.html
+++ b/layouts/shortcodes/fp_prefix.html
@@ -5,19 +5,17 @@
     <th>Notes</h>
   </tr>
 <tr>
+  <td>B</td>Body dimensions</td>
+  <td><ul>
+    <li>Body size (`X`x`Y`x`Z`)</li>
+    <li>Height parameter `Z` may be omitted</li>
+    <li>Prefifx `B` may be omitted if the body size is the major dimension used to define the footprint</li>
+  </td></ul>
+<tr>
   <td>P</td><td>Pad pitch</td>
   <td><ul>
     <li>Pitch (distance) between pins, pads or leads</li>
     <li>e.g. <code>P0.63</code> - 0.63mm pitch between pads</li>
-  </ul></td>
-</tr>
-<tr>
-  <td>B</td><td>Body size</td>
-  <td><ul>
-    <li>Size of package <code>{x}x{y}x{z}</code></li>
-    <li>Order of dimensions must be x-axis, y-axis, z-axis</li>
-    <li>Z dimension (height) may be ommited if not required</li>
-    <li>e.g. <code>B4x5</code> - package has major dimensions of 4.0mm x 5.0mm</li>
   </ul></td>
 </tr>
 <tr>
