Further rule tweaks

--- a/layouts/shortcodes/fp_prefix.html
+++ b/layouts/shortcodes/fp_prefix.html
@@ -5,21 +5,21 @@
     <th>Notes</h>
   </tr>
 <tr>
-  <td>B</td>Body dimensions</td>
+  <td>B or Body</td>Body dimensions</td>
   <td><ul>
     <li>Body size (`X`x`Y`x`Z`)</li>
     <li>Height parameter `Z` may be omitted</li>
     <li>Prefifx `B` may be omitted if the body size is the major dimension used to define the footprint</li>
   </td></ul>
 <tr>
-  <td>P</td><td>Pad pitch</td>
+  <td>P or Pitch</td><td>Pad pitch</td>
   <td><ul>
     <li>Pitch (distance) between pins, pads or leads</li>
     <li>e.g. <code>P0.63</code> - 0.63mm pitch between pads</li>
   </ul></td>
 </tr>
 <tr>
-  <td>D</td><td>Diameter</td>
+  <td>D or Dia</td><td>Diameter</td>
   <td><ul>
     <li>Diameter of major axis for cylindrical component</li>
     <li>e.g. <code>D10</code> - 10mm diameter</li>
@@ -57,13 +57,13 @@
   <td>Used if speficic lead dimensions need to be called out</td>
 </tr>
 <tr>
-  <td>PAD</td><td>Pad dimensions</td>
+  <td>Pad</td><td>Pad dimensions</td>
   <td><ul>
     <li>Only required for non-standard pads, or where multiple options are available</li>
     <li>e.g. <code>PAD2.25x1.75</code> - pad size is 2.25mm x 1.75mm</li>
   </ul></td>
 <tr>
-  <td>TAB</td><td>Tab dimensions</td>
+  <td>Tab</td><td>Tab dimensions</td>
   <td><ul>
     <li>Dimension of tab (either mechanical or soldering)</li>
     <li>e.g. <code>T3x1.5</code> - tab size is 3.0 x 1.5mm</li>
