--- a/layouts/shortcodes/fp_prefix.html
+++ b/layouts/shortcodes/fp_prefix.html
@@ -5,7 +5,7 @@
     <th>Notes</h>
   </tr>
 <tr>
-  <td>B or Body</td>Body dimensions</td>
+  <td>B or Body</td><td>Body dimensions</td>
   <td><ul>
     <li>Body size (`X`x`Y`x`Z`)</li>
     <li>Height parameter `Z` may be omitted</li>
