Futher rule additions
Also removed library FAQ document

--- a/layouts/section/klc.html
+++ b/layouts/section/klc.html
@@ -29,7 +29,7 @@
 		</li></ul>
 
 		<p>
-			Refer to the <a href="/libraries/faq">FAQ</a> and <a href="/contribute/libraries">contribution guidelines</a> for introductory information on contributing to the KiCad Libraries.
+			Refer to the <a href="/contribute/libraries">contribution guidelines</a> for introductory information on contributing to the KiCad Libraries.
 		</p>
 
 			<hr>
