--- a/layouts/klc/single.html
+++ b/layouts/klc/single.html
@@ -18,7 +18,7 @@
     <div class="col-lg-8 col-lg-offset-2 {{ if .Scratch.Get "sidemenu" }}col-md-10 col-sm-9{{ else }}col-sm-12{{ end }} post-full">
       {{ partial "breadcrumb.html" . }}
       <header>
-      <h2>{{ replace .File.LogicalName ".adoc" "" }}</h2>
+      <h2>KLC {{ replace .File.LogicalName ".adoc" "" }}</h2>
       {{ .Params.brief }}
       <hr>
     </header>
