--- a/layouts/section/libraries.html
+++ b/layouts/section/libraries.html
@@ -44,17 +44,7 @@
     The libraries are periodically compiled into stable <i>releases</i> which can be downloaded from the links below.
     </p>
 
-    <h3>Symbol Library Releases</h3>
-    {{ partial "github_release_table.html" "kicad-library" }}
-
-    <h3>Footprint Library Releases</h3>
-    {{ partial "github_release_table.html" "kicad-footprints" }}
-
-    <h3>3D Model Library Releases</h3>
-    {{ partial "github_release_table.html" "kicad-packages3d" }}
-
-    <h3>Template Library Releases</h3>
-    {{ partial "github_release_table.html" "kicad-templates" }}
+    {{ partial "github_release_table.html" }}
 
   </div>
 
